--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -618,12 +618,24 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
 
 .left-4 {
   left: 1rem;
+}
+
+.right-\[-8px\] {
+  right: -8px;
+}
+
+.top-1\/2 {
+  top: 50%;
 }
 
 .z-50 {
@@ -766,8 +778,8 @@ video {
   height: 100%;
 }
 
-.max-h-\[90vh\] {
-  max-height: 90vh;
+.min-h-0 {
+  min-height: 0px;
 }
 
 .min-h-\[60\.75px\] {
@@ -776,6 +788,10 @@ video {
 
 .min-h-full {
   min-height: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-5 {
@@ -843,6 +859,11 @@ video {
 
 .translate-y-5 {
   --tw-translate-y: 1.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -965,8 +986,12 @@ video {
   overflow-y: auto;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-\[32px\] {
+  border-radius: 32px;
 }
 
 .rounded-lg {
@@ -1029,6 +1054,10 @@ video {
   background-color: rgb(243 244 241 / var(--tw-bg-opacity, 1));
 }
 
+.bg-black\/60 {
+  background-color: rgb(0 0 0 / 0.6);
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(7 59 76 / var(--tw-bg-opacity, 1));
@@ -1041,10 +1070,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
 }
 
 .p-0 {
@@ -1067,8 +1092,8 @@ video {
   padding: 1.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-0 {
@@ -1201,6 +1226,10 @@ video {
   line-height: 1rem;
 }
 
+.text-\[20px\] {
+  font-size: 20px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1223,6 +1252,10 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-none {
+  line-height: 1;
 }
 
 .text-background {
@@ -1268,6 +1301,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#f3f4f1\] {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 241 / var(--tw-text-opacity, 1));
 }
 
 .opacity-0 {
@@ -1328,16 +1366,26 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-150 {
   transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .ease-in {
@@ -1376,6 +1424,8 @@ body {
   scrollbar-gutter: stable both-edges;
   position: relative;
   overflow-x: hidden;
+  scrollbar-color: #b1b1b1 #e1e1e1;
+  scrollbar-width: thin;
 }
 
 .boid-active {
@@ -1575,10 +1625,17 @@ nav ul li a:hover,
 
 /* Scrollbar */
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #46474b transparent;
-}
+/* * {
+    scrollbar-width: thin;
+    scrollbar-color: #afb3b8 #e9ebed;
+} */
+
+/* *::-webkit-scrollbar-track {
+    background: #e9ebed;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    scrollbar-width: thin;
+} */
 
 /* ::-webkit-scrollbar {
     width: 12px;
@@ -1743,7 +1800,7 @@ nav ul li a:hover,
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   padding: 10px 16px;
-  border-radius: 20px;
+  border-radius: 32px;
   display: flex;
   align-items: center;
   transition: opacity 0.3s;
@@ -1876,18 +1933,6 @@ input[type="checkbox"]:disabled {
   display: none;
 }
 
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -1907,6 +1952,11 @@ input[type="checkbox"]:disabled {
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
   color: rgb(7 59 76 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-\[\#2196F3\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(33 150 243 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
@@ -1973,10 +2023,6 @@ input[type="checkbox"]:disabled {
 
   .md\:block {
     display: block;
-  }
-
-  .md\:flex {
-    display: flex;
   }
 
   .md\:hidden {
@@ -2059,11 +2105,6 @@ input[type="checkbox"]:disabled {
   .md\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
   }
 
   .md\:pb-12 {
